[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/BlueThrust.png" type="Texture" id=3]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="BlueThrust" type="Sprite" parent="."]
position = Vector2( 15, 33 )
scale = Vector2( 0.05, 0.08 )
texture = ExtResource( 3 )

[node name="BlueThrust2" type="Sprite" parent="."]
position = Vector2( -10.5, 32 )
scale = Vector2( 0.05, 0.08 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.05, 0.05 )
polygon = PoolVector2Array( 22.5, -345, 22.5, -343.2, 42.5, -333.2, 42.5, -330.5, 55.7, -306, 143.7, -306, 151.7, -314, 185.5, -314, 271.5, -315, 271.5, -314, 282.5, -314, 282.5, -312.1, 292.1, -306, 317.5, -306, 491.5, -305, 491.5, -303.1, 494.5, -301.1, 494.5, -258, 493.4, -258, 491.4, -218, 489.4, -218, 474.4, -200, 472, -200, 452.1, -188, 447.6, -188, 372.8, -167, 367.7, -167, 351.5, -165.2, 347.1, -162, 345.2, -162, 334.4, -165, 326.5, -165, 292.5, -164.1, 292.5, -163, 289.5, -163, 289.5, -158.4, 283.6, -149, 280.9, -149, 273.5, -145.7, 261.3, -133, 257.8, -133, 252.5, -132.2, 245.5, -123, 243, -123, 236, -119, 211.5, -119, 211.5, -115.7, 217.5, -108.7, 217.5, -104.5, 229.2, -82, 231.5, -85, 239.5, -85, 239.5, -83.2, 249.5, -78.2, 249.5, -75, 251.3, -58, 252, -58, 294.5, -35.2, 294.5, -32.3, 297.5, -22.3, 297.5, 7, 296.4, 7, 293.3, 44, 291, 44, 245.5, 68.2, 249.5, 76.5, 249.5, 81.5, 247.7, 85, 246.4, 85, 238.4, 94, 223.5, 94, 223.5, 96.7, 217.5, 103.7, 217.5, 107.5, 205.8, 131, 230.5, 131, 230.5, 132.3, 240.5, 134.4, 240.5, 136, 247.2, 141, 253.8, 141, 262.5, 143.5, 262.5, 145.3, 267.5, 152, 269.1, 152, 281.5, 159.9, 281.5, 162.6, 284.2, 175, 287.2, 175, 292.2, 179, 293.4, 179, 295.4, 176, 323.5, 176, 323.5, 177.6, 325.2, 178.3, 342.5, 173.3, 342.5, 175.3, 439.5, 194.4, 439.5, 195.6, 462.5, 203.6, 462.5, 205.2, 477.5, 220.2, 477.5, 224, 478.5, 224, 478.5, 290, 477.3, 290, 476.3, 298, 474.5, 298, 471.5, 302, 468.5, 302, 286.5, 303, 286.5, 304, 280.5, 304, 280.5, 306, 269.1, 314, 149.5, 314, 149.5, 312.5, 141.5, 310.6, 141.5, 308.8, 135.7, 303, 133.5, 303, 55.2, 302, 39.7, 330, 38.1, 330, 22.1, 340, -169.5, 340, -169.5, 338.1, -187.5, 327.1, -187.5, 324.5, -200.6, 302, -218.5, 302, -380.5, 303, -380.5, 302, -393.5, 302, -393.5, 300.1, -399.5, 296.1, -399.5, 293.9, -405.5, 288.9, -405.5, 225, -403.4, 225, -388.4, 207, -386.1, 207, -358.5, 191.8, -358.5, 190.5, -368.5, 187.5, -368.5, 185.8, -376.5, 177.8, -376.5, 172.8, -374.1, 161, -372.3, 161, -365.3, 154, -362.8, 154, -358.5, 152.6, -349.5, 141, -344.7, 141, -330.4, 139.2, -329.7, 138, -433.5, 136, -433.5, 134.3, -505.5, 100.3, -505.5, 98.9, -514.5, 90.9, -514.5, 88.8, -517.5, 85.8, -517.5, 65, -522.5, -59, -522.5, -61.2, -518.2, -88, -515.2, -88, -506.3, -96, -504, -96, -442, -129, -437.5, -129, -424.7, -132, -338.6, -132, -354.5, -135.4, -354.5, -137, -380.5, -156, -380.5, -163.6, -384.4, -174, -381.6, -174, -375.6, -183, -372, -183, -367.5, -185.2, -367.5, -186.7, -367.9, -188, -370.1, -188, -396.5, -204.9, -396.5, -206.1, -414.5, -223.1, -414.5, -229, -417.5, -295, -415.5, -295, -408.5, -305, -404.5, -305, -204.5, -307, -190.7, -334, -189.1, -334, -170.5, -344.2, -170.5, -346 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = -1.5708
polygon = PoolVector2Array( -26, -17, -26, 18, 24, 18, 24, 8, 29, 8, 29, -8, 23, -8, 23, -18, -26, -18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
